Update swagger and postman
