# src/app.js
@@ -15,7 +15,7 @@ app.use(express.urlencoded({ extended: true }))
 import swaggerUi from 'swagger-ui-express'
 import YAML from 'yamljs'
 const swaggerDocument = YAML.load('./swagger.yaml')
-app.use(['/'], swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
 const ensureProfileIndex = async() => {
   try {
@@ -37,9 +37,10 @@ const ensureProfileIndex = async() => {
 app.post("/profile", async (req, res) => {
   if (!req.body.email || !req.body.pass) {
     return res.status(400).send({ "message": `${!req.body.email ? 'email ' : ''}${
-        (!req.body.email && !req.body.pass) 
-          ? 'and pass are required' : (req.body.email && !req.body.pass) 
-            ? 'pass is required' : 'is required'}`})
+      (!req.body.email && !req.body.pass) 
+        ? 'and pass are required' : (req.body.email && !req.body.pass) 
+          ? 'pass is required' : 'is required'
+    }`})
   }
 
   const id = v4()
@@ -56,7 +57,7 @@ app.get("/profile/:pid", async (req, res) => {
     await profileCollection.get(req.params.pid)
       .then((result) => res.send(result.value))
       .catch((error) => res.status(500).send({
-        "message": `Query failed: ${error.message}`
+        "message": `KV Operation Failed: ${error.message}`
       }))
   } catch (error) {
     console.error(error)
@@ -94,7 +95,7 @@ app.delete("/profile/:pid", async (req, res) => {
     await profileCollection.remove(req.params.pid)
       .then((result) => res.send(result.value))
       .catch((error) => res.status(500).send({
-        "message": `Delete failed: ${error.message}`
+        "message": `Profile Not Found, cannot delete: ${error.message}`
       }))
   } catch (e) {
     console.error(e)
